feat: generate reporting summary types
